2013-12-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* COPYING: Remove module, added missing one and fixed a license.

2013-12-10  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (launch_plugin): Adjust plugin_launch function call.

	* src/nasl_plugins.c (nasl_plugin_init): Remove unused function.
	(nasl_plugin_class): Remove unused structure.

	* src/pluginlaunch.c (plugin_launch): Remove launcher argument as only
	nasl_plugin_launch is used now.

	* src/pluginlaunch.h: Add and adjust function prototypes adequately.

	* src/pluginload.c (plugin_classes): Remove unused variable.
	(init_plugin_classes): Delete unused function.
	(collect_nvts): Don't iterate over plugin classes as only .nasl plugins
	are supported.
	(plugins_reload_from_dir): Remove init_plugin_classes call. Don't
	iterate over plugins classes as only .nasl plugins are supported.

	* src/pluginload.h: Add function prototype and remove pl_class_s struct.
	Delete externs.

2013-12-10  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/oval_plugins.c: Delete file.

	* src/CMakeLists.txt: Don't build deleted file.

	* src/pluginload.c (init_plugin_classes): Remove oval plugin class from
	plugins classes list.

2013-11-21  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 4.0+beta4.

2013-11-21  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 4.0+beta3 release.

	* CHANGES: Updated.

2013-11-19  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* doc/openvassd.8.in: Removed section "THE RULE SET FORMAT"
	and "THE RULES DATABASE" because the old rules schema and formats
	has been replaced by a new scheme that is simplified and completely
	handled via scanner preferences and openvassd config file.
	Also removed description of config preference "rules" which is not
	handled anymore.

2013-11-19  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
